redesign: migrate events page to a data-driven structure using `events.toml` and remove old markdown files.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -23,6 +23,7 @@
 /* 3. Page-Specific Styles */
 @import url('pages/landing.css');
 @import url('pages/projects.css');
+@import url('pages/events.css');
 @import url('pages/team.css');
 @import url('pages/roadmaps.css');
 
